// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listbox Matches the snapshot (multiselect) 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c1 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c6 {
  color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: var(--spacing-1x);
  width: var(--size-1x);
}

.c4:hover {
  border: 1px solid #006296;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: var(--spacing-1x);
  width: var(--size-1x);
}

.c10:hover {
  border: 1px solid #006296;
}

.c10 > .c5 {
  display: none;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: var(--spacing-1x);
  width: var(--size-1x);
}

.c12:hover {
  border: 1px solid #DBDEE1;
}

.c12 > .c5 {
  display: none;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  padding-right: var(--spacing-1x);
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2 .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  padding-right: var(--spacing-1x);
}

.c9:hover {
  background-color: #DBDEE1;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  padding-right: var(--spacing-1x);
}

.c11:hover {
  background-color: #FFFFFF;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  color: #60666E;
  display: block;
  font-size: 0.75rem;
}

<div
  aria-multiselectable="true"
  class="c0"
  data-testid="listbox-container"
  id="uuid1"
  role="listbox"
  tabindex="0"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    role="presentation"
  >
    <li
      aria-selected="true"
      class="c2"
      data-testid="listitem-optionA"
      id="uuid1_optionA"
      role="option"
      selected=""
    >
      <span
        aria-hidden="true"
        checked=""
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      <span
        class="c7"
      >
        Option A
        <span
          class="c8"
        >
          The first one
        </span>
      </span>
    </li>
    <li
      class="c9"
      data-testid="listitem-optionB"
      id="uuid1_optionB"
      role="option"
    >
      <span
        aria-hidden="true"
        class="c3 c10"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      <span
        class="c7"
      >
        Option B
      </span>
    </li>
    <li
      aria-selected="true"
      class="c2"
      data-testid="listitem-optionC"
      id="uuid1_optionC"
      role="option"
      selected=""
    >
      <span
        aria-hidden="true"
        checked=""
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      <span
        class="c7"
      >
        Option C
      </span>
    </li>
    <li
      aria-disabled="true"
      class="c11"
      data-testid="listitem-optionD"
      disabled=""
      id="uuid1_optionD"
      role="option"
    >
      <span
        aria-hidden="true"
        class="c3 c12"
        disabled=""
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      <span
        class="c7"
      >
        Option D
      </span>
    </li>
    <li
      class="c9"
      data-testid="listitem-optionE"
      id="uuid1_optionE"
      role="option"
    >
      <span
        aria-hidden="true"
        class="c3 c10"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      <span
        class="c7"
      >
        Option E
      </span>
    </li>
  </ul>
</div>
`;

exports[`Listbox Matches the snapshot 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c1 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  padding-right: var(--spacing-1x);
}

.c2:hover {
  background-color: #DBDEE1;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  padding-right: var(--spacing-1x);
}

.c5:hover {
  background-color: #DBDEE1;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  padding-right: var(--spacing-1x);
}

.c6:hover {
  background-color: #FFFFFF;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  color: #60666E;
  display: block;
  font-size: 0.75rem;
}

<div
  class="c0"
  data-testid="listbox-container"
  id="uuid1"
  role="listbox"
  tabindex="0"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    role="presentation"
  >
    <li
      class="c2"
      data-testid="listitem-optionA"
      id="uuid1_optionA"
      role="option"
    >
      <span
        class="c3"
      >
        Option A
        <span
          class="c4"
        >
          The first one
        </span>
      </span>
    </li>
    <li
      class="c5"
      data-testid="listitem-optionB"
      id="uuid1_optionB"
      role="option"
      selected=""
    >
      <span
        class="c3"
      >
        Option B
      </span>
    </li>
    <li
      class="c2"
      data-testid="listitem-optionC"
      id="uuid1_optionC"
      role="option"
    >
      <span
        class="c3"
      >
        Option C
      </span>
    </li>
    <li
      aria-disabled="true"
      class="c6"
      data-testid="listitem-optionD"
      disabled=""
      id="uuid1_optionD"
      role="option"
    >
      <span
        class="c3"
      >
        Option D
      </span>
    </li>
    <li
      class="c2"
      data-testid="listitem-optionE"
      id="uuid1_optionE"
      role="option"
    >
      <span
        class="c3"
      >
        Option E
      </span>
    </li>
  </ul>
</div>
`;
